[project]
name = "safespace-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "langchain>=1.0.7",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "twilio>=9.8.6",
    "uvicorn>=0.38.0",
]
